# roscamp-repo-3

./: .gitignore  File_structure.txt  README.md  dir_structure.txt  monitoring_gui_intergrated2.py
HW_Controller/Robot_Arm_Controller/ros2_mycobot_pick_and_place/src/custom_messeage/: CMakeLists.txt  package.xml
HW_Controller/Robot_Arm_Controller/ros2_mycobot_pick_and_place/src/custom_messeage/srv/: RobotArmRequest.srv
HW_Controller/Robot_Arm_Controller/ros2_mycobot_pick_and_place/src/pick_and_place/: package.xml  setup.cfg  setup.py
HW_Controller/Robot_Arm_Controller/ros2_mycobot_pick_and_place/src/pick_and_place/launch/: pick_and_place_launch.py
HW_Controller/Robot_Arm_Controller/ros2_mycobot_pick_and_place/src/pick_and_place/pick_and_place/: base_coordinate_transform.py  camera_test_node.py  django_client.py  image_capture.py  image_caputure_old.py  image_detection.py  robot1_control_node.py  robot2_control_node.py  test_robot_control_v3.py
HW_Controller/Robot_Arm_Controller/ros2_mycobot_pick_and_place/src/pick_and_place/pick_and_place/test_nodes/: camera_node.py  control_node.py  detection_node.py  transform_node.py
LocationManager/: CMakeLists.txt  GwanjeCam  README.md  main.cpp
LocationManager/include/: GwanjeCam.hpp
LocationManager/src/: GwanjeCam.cpp  calib_data.yaml  cam_to_world.yaml
Robocallee_PickBot/: CMakeLists.txt  main.cpp  matrix.yml
Robocallee_PickBot/Core/include/: Commondefine.hpp  Core.hpp
Robocallee_PickBot/Core/src/: Core.cpp
Robocallee_PickBot/Core/src/robocallee_pickbot_Log_file/2025-07-29/: 16.txt
Robocallee_PickBot/ImageProcessing/Calibration/include/: Calibrator.hpp
Robocallee_PickBot/ImageProcessing/Calibration/robocallee_pickbot_Log_file/2025-07-29/: 11.txt
Robocallee_PickBot/ImageProcessing/Calibration/src/: Calibrator.cpp
Robocallee_PickBot/ImageProcessing/DepthEstimate/include/: DepthEstimate.hpp
Robocallee_PickBot/ImageProcessing/DepthEstimate/src/: DepthEstimate.cpp
Robocallee_PickBot/ImageProcessing/DepthEstimate/src/robocallee_pickbot_Log_file/2025-07-29/: 16.txt
Robocallee_PickBot/ImageProcessing/Detectors/src/: ImageProcDetector.cpp
Robocallee_PickBot/ImageProcessing/Geometry/include/: Geometry.hpp
Robocallee_PickBot/ImageProcessing/Geometry/src/: Geometry.cpp
Robocallee_PickBot/log/: latest_build
Robocallee_PickBot/robocallee_pickbot_Log_file/2025-07-30/: 17.txt
Service/ROS_Task_Manager/robocallee_fms/: CMakeLists.txt  main.cpp  monitor_goals.py  package.xml  pinkypinky.py
Service/ROS_Task_Manager/robocallee_fms/Adapters/include/: AmrAdapter.hpp  RobotArmAdapter.hpp
Service/ROS_Task_Manager/robocallee_fms/Adapters/src/: AmrAdapter.cpp  RobotArmAdapter.cpp
Service/ROS_Task_Manager/robocallee_fms/Core/include/: Commondefine.hpp  Core.hpp  ICore.hpp
Service/ROS_Task_Manager/robocallee_fms/Core/src/: Core.cpp
Service/ROS_Task_Manager/robocallee_fms/Interface/include/: ClientWrapper.hpp  RosInterface.hpp
Service/ROS_Task_Manager/robocallee_fms/Interface/src/: RosInterface.cpp
Service/ROS_Task_Manager/robocallee_fms/Manager/include/: PathSyncManager.hpp  RequestManager.hpp  StorageManager.hpp
Service/ROS_Task_Manager/robocallee_fms/Manager/src/: PathSyncManager.cpp  RequestManager.cpp  StorageManager.cpp
Service/ROS_Task_Manager/robocallee_fms/Map/: map.pgm  map.yaml  map001.pgm  map001.yaml  test_map.pgm  test_map.yaml  test_map01.pgm  test_map01.yaml
Service/ROS_Task_Manager/robocallee_fms/Task/src/: Dispatcher.cpp
Service/ROS_Task_Manager/robocallee_fms/Traffic/include/: OccupancyGrid.hpp  TrafficAdapter.hpp  TrafficPlanner.hpp  TrafficPlannerNode02.hpp  astar.hpp  types.hpp
Service/ROS_Task_Manager/robocallee_fms/Traffic/src/: OccupancyGrid.cpp  TrafficPathPlanner.cpp  TrafficPlanner.cpp  TrafficPlannerNode.cpp  TrafficPlannerNode02.cpp
Service/ROS_Task_Manager/robocallee_fms/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/include/robocallee_fms/robocallee_fms/srv/: customer_request.h  customer_request.hpp  employee_request.h  employee_request.hpp  robot_arm_request.h  robot_arm_request.hpp
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/include/robocallee_fms/robocallee_fms/srv/detail/: done_msg__builder.hpp  (+55 more)
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/lib/robocallee_fms/: robocallee_fms_node
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/share/ament_index/resource_index/package_run_dependencies/: robocallee_fms
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/share/ament_index/resource_index/parent_prefix_path/: robocallee_fms
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/share/ament_index/resource_index/rosidl_interfaces/: robocallee_fms
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/share/robocallee_fms/: local_setup.sh  package.dsv  package.ps1  package.sh
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/share/robocallee_fms/cmake/: ament_cmake_export_dependencies-extras.cmake  export_robocallee_fms__rosidl_generator_cExport-debug.cmake  export_robocallee_fms__rosidl_generator_pyExport-debug.cmake  export_robocallee_fms__rosidl_typesupport_fastrtps_cExport-debug.cmake  export_robocallee_fms__rosidl_typesupport_fastrtps_cppExport-debug.cmake  robocallee_fms__rosidl_typesupport_cExport-debug.cmake  robocallee_fms__rosidl_typesupport_cppExport-debug.cmake  robocallee_fms__rosidl_typesupport_introspection_cExport-debug.cmake  robocallee_fms__rosidl_typesupport_introspection_cppExport-debug.cmake  rosidl_cmake-extras.cmake
Service/ROS_Task_Manager/robocallee_fms/install/robocallee_fms/share/robocallee_fms/srv/: CustomerRequest.idl  CustomerRequest.json  DoneMsg.idl  DoneMsg.json  EmployeeRequest.idl  EmployeeRequest.json  RobotArmRequest.idl  RobotArmRequest.json  RobotArmRequest.srv  ShoeRequest.idl  ShoeRequest.json
Service/ROS_Task_Manager/robocallee_fms/log/: latest_build
Service/ROS_Task_Manager/robocallee_fms/srv/: EmployeeRequest.srv  RobotArmRequest.srv
(+176 files in other folders)
