<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robocallee_fms</name>
  <version>0.0.1</version>
  <description>Fleet management module for RoboCallee</description>
  <maintainer email="parkseungwoo@gmial.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 아래 geometry_msgs, tf2, tf2_ros, tf2_geometry_msgs 추가 -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>tf2</build_depend>
  <exec_depend>tf2</exec_depend>

  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>

  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- 기존 typo 수정 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
